{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Ground_Move",
            "id": "cecde46a-c54f-4f2a-a49d-1be0553b35c7",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "930c8e0f-3025-416e-beab-690576d7444f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d8b8ab87-0918-44cb-9429-2ab784bfa976",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "13fa60e7-38cd-47bc-89a8-3692f9396806",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "7ac3bc54-8573-43fb-88d8-c155e7d4e823",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "9fca10c8-910b-499f-9114-39b00c33541a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02f1b6b3-6188-4b6d-bcbc-6b1f2e2375ff",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cf363d4-1114-4101-b9a8-9390becd6496",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a3c4665-51d6-4dc0-8683-c2bc285bb361",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5156a76-6797-40de-9f35-fbcc975e9205",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c559db9-73b3-4a67-b13d-e19e50a71182",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a61273b1-9b51-46e7-af4d-892128fd0533",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Air_Move",
            "id": "7bdef28e-ea00-490f-b5de-aa2a0d097946",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "32a02d7c-503c-4ef2-a076-89ba2fcd6832",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "71732ee3-a32e-4344-b906-5b1f397afbba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "3b4d4d73-dcec-4a08-86aa-90555369daaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e39c797f-a85b-41e8-a955-e9762f78df54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b5d1349-87b7-43c6-aa0e-e12c33fd0323",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97edd5ae-8ceb-467c-8799-b6147fff196a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44cfd377-659c-4e27-9735-1beeff527ed4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be1cde16-0f2f-44ec-8a08-0cdcc8656a80",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Sliding",
            "id": "2266a33f-d1f2-498d-95eb-54195380cef5",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5239e8e5-b55c-4df6-8e5b-1c98aca1364b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "444dbb10-fc5a-4b2f-9933-06b664d83706",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "62f0df47-bb35-418e-9a31-e326336426d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "945d321d-a17c-4af7-9cef-8478ecc0ad0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3886f4ba-75a9-49f8-90de-98b43a0311f5",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84b826d2-851a-4a81-ba2d-c68d5aa80997",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f096a431-6822-4aea-9cb0-82504142f5a3",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a69703c3-684d-4d6c-8431-7f17ac3633fa",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dash",
            "id": "6feb2e0f-de12-4f36-9677-48e713c4389d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "03530f72-835b-4c5c-a150-1b9f1abb8d0b",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "00502188-9782-4ba2-95b6-58d838fd804f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "44ba5cc1-4368-4279-b3f7-5c499ef52a01",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d336eab2-1ac5-4f4c-b2dd-f33419f3669b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WallJump",
            "id": "f42d5a21-3651-46b2-8fa6-e0c7f144d649",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1b283562-4c22-47b8-a949-1ba9cd312dfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "94210c8c-8593-4e2c-b14d-ac767b7b2e41",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "f21ea219-56da-491f-97b3-4360d62eb1df",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "72e99536-1414-4f9c-ab42-4adfa15815f5",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a88b0426-f1d3-4a7d-98d0-cd8575078858",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c97ebd3-8c9c-4863-9ffd-1b6ef587eea8",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}